--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ header .logo {
     width: 100%;
     height: 350px;
     display: flex;
-    transition: transform 1s ease-in;
+    transition: transform 0.5s ease-in;
 
 
 
@@ -234,5 +234,17 @@ header .logo {
         height: 250px;
 
     }
+    .slide{
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+
+    }
+    .prev,.next{
+        font-size: 22px;
+        font-weight: 600;
+        
+    }
+
 
 }
