--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body {
     background: #eee;
 
 }
+.zoom{
+    transition: transform 1s ease-in-out;
+}
+.zoom:hover{
+    transform: scale(1.1);
+}
 
 header {
     width: 100%;
@@ -23,9 +29,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 8px #000;
+    box-shadow: 0 0 10px #000;
     padding: 10px;
     z-index: 1000;
+    margin-bottom: 2px;
 
 
 
@@ -74,12 +81,14 @@ header .logo {
 
     overflow: hidden;
 
-    background: yellow;
+    /* background: yellow; */
+    margin-bottom: 10px;
+
     
 } 
 .slider {
     width: 100%;
-    height: 350px;
+    height: 300px;
     display: flex;
     transition: transform 0.5s ease-in;
 
@@ -89,8 +98,13 @@ header .logo {
 .slide{
     flex: 0 0 100%;
     height: 350px;
-    background-size: cover;
-    background-position: center;
+   
+
+
+}
+.slide img{
+    width: 100%;
+    height: auto;
 
 
 }
@@ -111,13 +125,62 @@ header .logo {
     color: #fff;
 
 }
+.head{
+    display: flex;
+    justify-content: center;
 
+}
+.head h2{
+    color: yellowgreen;
+    font-size: 35px;
+}
+.contains{
+    width: 100%;
+    height: 80px;
+    /* background: yellow; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding:  0 10px;
 
+}
+.circle{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 10px #000;
 
+    background: red;
+}
+.products{
+    display:grid ;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    border: 2px solid yellowgreen;
+    padding: 10px;
+    
 
+}
 
+.items{
+    height: 200px;
+    /* width: auto; */
+    border-radius: 20px;
+    background: teal;
+    box-shadow: 1px  10px 5px ;
+    transition: transform 0.6s ease-in-out;
 
-
+}
+.items:hover{
+    box-shadow:    0 0 10px 5px;
+    transform: scale(1.01);
+}
 
 
 
@@ -244,6 +307,28 @@ header .logo {
         font-size: 22px;
         font-weight: 600;
         
+    }
+    .contains{
+        width: 100%;
+        height: 60px;
+
+    }
+    .circle{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        color: #fff;
+
+
+    }
+    .products{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-content: center;
+        align-items: center;
+        justify-content: space-between;
+        
+
     }
 
 
