--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ header .logo {
     border-radius: 50%;
     display: flex;
     align-items: center;
+    
     justify-content: center;
     box-shadow: 0 0 10px #000;
 
@@ -182,10 +183,60 @@ header .logo {
     transform: scale(1.01);
 }
 
+/* -----------------------------make a footer   */
+footer{
+    width: 100%;
+    height: 250px;
+    background: #000;
+}
+.foot{
+    width: 100%;
+    height: 200px;
+    /* background: green; */
+    margin-top: 10px;
+    display: grid;
+    justify-content: space-between;
+    color: #fff;
+    grid-template-columns: repeat(4,1fr);
+
+    align-items: center;
+    
+    padding: 10px;
+}
+.product ul li {
+
+    margin:10px;
+}
 
 
 
+.product ul li a{
+    cursor: pointer;
+    /* margin: 10px; */
+    color: #fff;
 
+
+}
+.icon{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    /* background: blue; */
+}
+.icon i{
+    font-size: 25px;
+    color: #fff;
+    transition: 1s ease-in-out;
+
+}
+.icon i:hover{
+    color: yellowgreen;
+    cursor: pointer;
+    /* transform: scale(1.01); */
+
+}
 
 
 
@@ -318,6 +369,7 @@ header .logo {
         height: 50px;
         border-radius: 50%;
         color: #fff;
+        font-size: 10px;
 
 
     }
@@ -330,6 +382,21 @@ header .logo {
         
 
     }
+    footer{
+        width: 100%;
+        height: 500px;
+    }
+    .foot{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        justify-content: space-between;
+        align-items:center ;
+        height: 400px;
+        padding: 5px;
+
+
+    }
+   
 
 
 }
