--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
 .zoom{
     transition: transform 1s ease-in-out;
 }
+.zoom img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+
+}
 .zoom:hover{
     transform: scale(1.1);
 }
@@ -178,9 +184,15 @@ header .logo {
     transition: transform 0.6s ease-in-out;
 
 }
+.items img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
 .items:hover{
     box-shadow:    0 0 10px 5px;
     transform: scale(1.01);
+    
 }
 
 /* -----------------------------make a footer   */
