--- a/design.css
+++ b/design.css
@@ -22,33 +22,22 @@
     padding: 10px;
     align-content: center;
     border-radius: 30px;
-
     /* background: yellow; */
-
 }
-
 .box2 {
     background: yellow;
     height: 200px;
     box-shadow: 0 0 7px #000;
     transition: transform 0.6s ease-in-out;
     border-radius: 30px;
-
-
 }
-
 .box2 img {
     width: 100%;
     height: 100%;
     border-radius: 30px;
     transition: transform 0.7s ease-in-out;
-
-
-
 }
-
 .box2 img:hover {
-
     transform: translateY(-15%);
 }
 
@@ -71,9 +60,6 @@ input {
     border-radius: 20px;
     outline: none;
     border: none;
-
-
-
 }
 
 i {
@@ -86,27 +72,19 @@ i {
 .box3{
         width: 100%;
         height: 100%;
-
-
         display: flex;
         justify-content: space-between;
-
         align-items: center;
         background: red;
-
-
-}
+        overflow: hidden;
+    }
 .box4{
         width: 50%;
         height:500px;
         background: yellowgreen;
         justify-content:center;
         display: flex;
-
-
         align-items: center;
-
-
     }
     .box4 h1{
         color: red;
@@ -120,11 +98,10 @@ i {
         border-bottom: 2px solid red;
         border-top: 2px solid red;
         /* border: none; */
+        text-transform: none;
+        text-align: center;
         background: transparent;
-
         outline: none;
-
-
     }
     input::placeholder{
         color: #000;
@@ -172,32 +149,20 @@ i {
 
     .box2 {
         border-radius: 30px;
-
-
         transition: transform 0.6s ease-in-out;
-
-
-
     }
-
     .box2 img {
         width: 100%;
         height: 100%;
         transition: transform 0.7s ease-in-out;
-
     }
-
     .box2 img:hover {
-
-        transform: translateY(-15%);
+         transform: translateY(-15%);
     }
-
     .box2:hover {
         transform: scale(1.01);
         box-shadow: 0 0 7px #000;
-
     }
-
     .heads {
         justify-content: space-between;
 
@@ -205,44 +170,31 @@ i {
         align-items: center;
         color: yellowgreen;
         text-shadow: 1px -1px 4px #000;
-
     }
-
-    .heads h1 {
-        /* font-size: 20px; */
-    }
-
     .heads input {
         width: 150px;
         display: none;
-
     }
-
     .left {
         display: flex;
         margin-right: 10px;
-
     }
     .box5{
         display: none;
-
     }
     .box3{
         width: 100%;
         height: 100%;
         display: block;
-
     }
     .box4{
         width: 100%;
         height: 500px;
-
-        padding: 10px;
+         padding: 10px;
         background-image: url(image/4.png);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        
     }
     .box4 h1{
         color: #a3eb13;
@@ -250,6 +202,7 @@ i {
     input{
         color: #fff;
         text-align: center;
+        text-transform: none;
     }
     input::placeholder{
         color: #fff;
