--- a/style.css
+++ b/style.css
@@ -63,17 +63,17 @@ header .logo {
 } 
 .slider {
     width: 100%;
-    height: 300px;
+    height: 400px;
     display: flex;
     transition: transform 0.5s ease-in;
 }
 .slide{
     flex: 0 0 100%;
-    height: 350px;
+    height: 400px;
 }
 .slide img{
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 .controls{
     position: absolute;
@@ -132,17 +132,39 @@ header .logo {
     /* width: auto; */
     border-radius: 20px;
     background: teal;
+    margin-bottom: 20px;
     box-shadow: 1px  10px 5px ;
-    transition: transform 0.6s ease-in-out;
+    transition: transform 1s ease-in-out;
 }
 .items img{
     width: 100%;
     height: 100%;
     border-radius: 20px;
+    transition: transform 1s ease-in-out;
+}
+.items img:hover{
+    transform: translateY(-10%);
+
+}
+.items a{
+    color: black;
+    background: yellowgreen;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
+    display: none;
 }
 .items:hover{
+    transform: translateY(10%);
+
+}
+
+.items:hover a{
     box-shadow:    0 0 10px 5px;
+    display: block;
     transform: scale(1.01);
+    z-index: 1000000;
+
 }
 
 /* -----------------------------make a footer   */
@@ -248,12 +270,17 @@ footer{
     }
     .slide-container{
         width: 100%;
-        height: 250px;
+        height: 300px;
     }
     .slide{
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+    }
+    .slide img{
+        width: 100%;
+        height: 100%;
+
     }
     .prev,.next{
         font-size: 22px;
